--- a/ESOPAPP/AndroidManifest.xml
+++ b/ESOPAPP/AndroidManifest.xml
@@ -6,6 +6,11 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
+    
+    <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
 
     <application
         android:allowBackup="true"
